crates/nvs-ir/src/lower/snapshots/nvs_ir__lower__tests__reading_an_element_through_a_uint_subscript_still_renders_the_decimal.snap
---
source: crates/nvs-ir/src/lower/mod.rs
expression: "print_function(&f, map.file(file))"
---
fn m(object, array, uint) -> int {
  bb0:
    safepoint
    v0 = param 0  ; object
    v1 = param 1  ; array
    v2 = param 2  ; uint
    ; stmt s0 @4:5-4:19
    v3 = helper.uint_to_string v2  ; string
    v4 = array.get v1, v3 ! bb1  ; int
    release v3
    release v1
    release v0
    return v4
  bb1:
    release v3
    release v1
    release v0
    propagate "m() at t.nvs:4"
}
