crates/nvs-ir/src/lower/snapshots/nvs_ir__lower__tests__reassigning_a_string_local_releases_its_previous_value.snap
---
source: crates/nvs-ir/src/lower.rs
expression: "print_function(&f, map.file(file))"
---
fn m(object) -> void {
  bb0:
    safepoint
    v0 = param 0  ; object
    ; stmt s0 @4:5-4:21
    v1 = const.str "a"  ; string
    ; stmt s1 @5:5-5:14
    v2 = const.str "b"  ; string
    release v1
    release v0
    release v2
    return
}
