crates/nvs-ir/src/lower/snapshots/nvs_ir__lower__tests__returning_a_string_property_read_retains_it.snap
---
source: crates/nvs-ir/src/lower.rs
expression: "print_function(&f, map.file(file))"
---
fn m(object) -> string {
  bb0:
    safepoint
    v0 = param 0  ; object
    ; stmt s0 @7:5-7:26
    v1 = new Foo() ! bb1  ; object
    ; stmt s1 @8:5-8:23
    v2 = field.get v1, Foo::name  ; string
    retain v2
    release v1
    release v0
    return v2
  bb1:
    release v0
    propagate "m() at t.nvs:7"
}
