crates/nvs-ir/src/lower/snapshots/nvs_ir__lower__tests__returning_a_string_returning_calls_result_needs_no_retain.snap
---
source: crates/nvs-ir/src/lower.rs
expression: "print_function(&f, map.file(file))"
---
fn m(object) -> string {
  bb0:
    safepoint
    v0 = param 0  ; object
    ; stmt s0 @4:5-4:25
    v1 = class.of v0  ; classdesc
    v2 = call T::make(this: v1) ! bb1  ; string
    release v0
    return v2
  bb1:
    release v0
    propagate "m() at t.nvs:4"
}
